--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,33 @@
     <title>Groupe Constructek</title>
   </head>
   <body>
+
+    <form netlify-honeypot="bot-field" hidden name="simpleContactForm" method="POST" data-netlify="true" id="simple-contact-form">
+
+      <div class="mb-5">
+          <label for="message" class="text-lg flex justify-between items-end"><span>Message</span><span>Required</span></label>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+      </div>
+      <div class="mb-5">
+          <label for="name" class="text-lg flex justify-between items-end"><span>Name</span><span class="text-xs text-red-500 ">Required</span></label>
+          <div class="mt-1 flex shadow-md">
+              <span class="inline-flex items-center px-3 rounded-none border border-r-0 border-gray-900 dark:border-gray-100"><i class="fas fa-user"></i></span>
+              <input type="text" name="name" class="flex-1 block w-full sm:text-sm rounded-none border border-gray-900 dark:border-gray-100 bg-white dark:bg-gray-900" />
+          </div>
+      </div>
+      <div class="mb-5">
+          <label for="email" class="text-lg flex justify-between items-end"><span>Email</span><span class="text-xs text-red-500">Required</span></label>
+          <div class="mt-1 flex shadow-md">
+              <span class="inline-flex items-center px-3 rounded-none border border-r-0 border-gray-900 dark:border-gray-100"><i class="fas fa-envelope"></i></span>
+              <input type="email" name="email" class="flex-1 block w-full sm:text-sm rounded-none border border-gray-900 dark:border-gray-100 bg-white dark:bg-gray-900" />
+          </div>
+      </div>
+      <div>
+          <button type="submit" class="font-medium shadow-md rounded-none p-2 w-full focus:outline-none focus:ring-2 focus:ring-offset-2 border border-gray-900 dark:border-gray-100 bg-gray-800 dark:bg-gray-200 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-gray-100"><i class="fas fa-check"></i> Send</button>
+      </div>
+  </form>
+  </div>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
