--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <body>
 
     <form hidden name="simpleContactForm" method="POST" data-netlify="true" id="simple-contact-form">
+      <div data-netlify-recaptcha="true"></div>
           <textarea name="message" id="message" cols="30" rows="10"></textarea>
           <input type="text" name="name" />
           <input type="email" name="email" />
