--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,11 @@
           <p class="hidden">
             <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
           </p>
-          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+
           <input type="text" name="name" />
+          <input type="tel" name="phone" />
           <input type="email" name="email" />
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
 
           <div data-netlify-recaptcha="true"></div>
 
